# Ani-Rust

./: AniRust.md  Cargo.toml  README.md  test_script.py
src/: api.rs  extractor.rs  gogoanime.rs  history.rs  main.rs  player.rs  ui.rs  utils.rs
